# planning-sbpl_spline_primitives

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  manifest.xml
src/: CMakeLists.txt  Dummy.cpp  Dummy.hpp  Main.cpp  SbplSplineMotionPrimitives.cpp  SbplSplineMotionPrimitives.hpp  SplinePrimitivesConfig.hpp
src/gui/: CMakeLists.txt  SbplGui.h
test/: CMakeLists.txt  test_Dummy.cpp  test_SbplSplineMotionPrimitives.cpp
viz/: CMakeLists.txt  MotionPlanningLibrariesSbplSplineVisualization.cpp  MotionPlanningLibrariesSbplSplineVisualization.hpp  SbplSplineVisualization.cpp  SbplSplineVisualization.hpp  Test.cpp  Test.hpp  sbpl_spline_primitives-viz.pc.in  vizkit_plugin.rb
viz/gui/: CMakeLists.txt  SbplGui.cpp  SbplGui.h  main.cpp  sbpl_viz_gui.pc.in
